refactor(service): update ScheduledCommunicationService with audit logs and improvements